feat: functional laboratories configuration
